[fix]: spacing

--- a/components/Articles/Articles.scss
+++ b/components/Articles/Articles.scss
@@ -57,6 +57,7 @@
 
 h3 {
     margin-top: 1em;
+    margin-bottom: 0.5em;
 }
 
 p {
